--- a/src/App.css
+++ b/src/App.css
@@ -1,42 +1,61 @@
-#root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
+.App {
   text-align: center;
+  width: 100%;
+  height: 100%;
 }
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
-}
-
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.pokemonContainer {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  place-items: center;
+  gap: 20px;
+  margin-top: 20px;
+  text-align: center;
+  width: 100%;
+  background-color: white;
+  padding: 40px 0;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
+.header {
+  width: 100%;
+  height: 100px;
+  background-color: red;
+  color: rgb(0, 0, 0);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: clamp(16px, 2.5vw, 24px);
+  position: relative;
+  overflow: hidden;
+}
+.header h1 {
+  width: 10em;
+  height: 10em;
+  text-align: center;
+  position: relative;
+  z-index: 1;
+  background-color: rgb(255, 255, 255);
+  border-radius: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border: 6px rgb(0, 0, 0) solid;
 }
 
-.card {
-  padding: 2em;
+.header::after {
+  content: "";
+  height: 6px;
+  width: 100%;
+  position: absolute;
+  background-color: rgb(0, 0, 0);
+  top: 50%;
 }
 
-.read-the-docs {
-  color: #888;
+.header::before {
+  content: "";
+  height: 50%;
+  width: 100%;
+  position: absolute;
+  background-color: rgb(255, 255, 255);
+  top: calc(50% + 6px);
 }
